	data/graphics/sprites/head-christmastree.xml,
	data/graphics/sprites/head-antlerhat.xml,
	data/graphics/sprites/head-santabeardhat.xml,
	data/graphics/sprites/head-antlerhat.png,
	data/graphics/sprites/head-santabeardhat.png,
	data/graphics/sprites/head-rangerhat.xml, data/items.xml,
	data/equipment.xml, data/monsters.xml: Added new Christmas themed
	headwear by Pauan.

2006-12-21  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* configure.ac, CMakeLists.txt, README, data/help/header.txt: Updated
	version to 0.0.22.

2006-12-18  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/items/armor-chest-vnecksweater.png: New version of
	the inventory icon for the V-neck sweater by Saphy.

2006-12-17  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/sell.cpp, src/gui/shoplistbox.h, src/gui/listbox.h,
	src/gui/shop.cpp, src/gui/buy.cpp, src/gui/shoplistbox.cpp,
	src/gui/listbox.cpp: Subclassed ShopListBox from ListBox to get rid of
	some duplicated code, and fixed a problem with scrolling to the
	current selection. Also aligned the text a bit better and put the
	price in parenthesis.

2006-12-16  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/connection.cpp, src/gui/chargedialog.cpp: Fixed dialog
	visibility.
	* src/localplayer.cpp, src/game.cpp, src/localplayer.h: Fixed issues
	with walking one tile too many and changing direction towards an
	obstacle.

2006-12-15  Philipp Sehmisch  <tmw@crushnet.org>

	* data/graphics/tiles/desert1.png: Removed some unused legacy tiles and 
	added variant tiles for the cliffs.

2006-12-14  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/game.cpp, src/engine.h, src/engine.cpp: Removed the rather
	useless remaining draw function from the engine class.
	* src/being.cpp, src/being.h: Fixed an issue with fading out damage
	texts (they were sometimes fully opaque at the end of fading out).

2006-12-12  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* The Mana World.dev, tmw.cbp: Updated project files.