@@ -5,7 +5,8 @@ tmwdatadir = $(pkgdatadir)/data
 
 tmwdata_DATA =			\
 	equipment.xml	\
-	items.xml
+	items.xml	\
+	monsters.xml
 
 EXTRA_DIST =			\
 	$(tmwdata_DATA)
